corpus/baselines/conformance/jsdoc/paramTagWrapping.errors.txt
bad.js(9,14): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== good.js (0 errors) ====
    /**
     * @param
     * {number} x Arg x.
     * @param {number}
     * y Arg y.
     * @param {number} z
     * Arg z.
     */
    function good(x, y, z) {
    }
    
    good(1, 2, 3)
    
    
==== bad.js (1 errors) ====
    /**
     * @param *
     * {number} x Arg x.
     * @param {number}
     * * y Arg y.
     * @param {number} * z
     * Arg z.
     */
    function bad(x, y, z) {
                 ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    
    bad(1, 2, 3)
    